k8s/whoami/10-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.1
          ports:
            - containerPort: 80
