k8s/whoami/20-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: lab
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
